--- a/BasePM.Terminal/BasePM.Terminal.csproj
+++ b/BasePM.Terminal/BasePM.Terminal.csproj
@@ -8,8 +8,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="linq2db" Version="5.3.2" />
+    <PackageReference Include="linq2db.PostgreSQL" Version="5.3.2" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
     <PackageReference Include="Spectre.Console.Cli" Version="0.48.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BasePM.Data\BasePM.Data.csproj" />
   </ItemGroup>
 
 </Project>
