--- a/BasePM.Data/BasePM.Data.csproj
+++ b/BasePM.Data/BasePM.Data.csproj
@@ -6,4 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="linq2db" Version="5.3.2" />
+    <PackageReference Include="linq2db.AspNet" Version="5.3.2" />
+    <PackageReference Include="Npgsql" Version="8.0.1" />
+  </ItemGroup>
+
 </Project>
